<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_calc">Calc</string>
    <string name="app_name_slogan">Calculate anything easily and Quickly</string>
    <drawable name="calc">#c5e9b4</drawable>
    <drawable name="calc_back">#269cb5</drawable>
    <string name="dispHint">Enter..</string>
    <string name="disp"/>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="add">+</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="cancel">C</string>
    <string name="sub">-</string>
    <string name="Test">Test</string>
</resources>
