<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calc_back"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
 
    <EditText
        android:id="@+id/display"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:background="@drawable/calc"
        android:gravity="right"
        android:hint="@string/dispHint"
        android:text="@string/disp" />
    
   <LinearLayout android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:gravity="center"
       android:paddingTop="20dp" >
    <Button
        android:id = "@+id/seven"
        android:text="@string/seven"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color1_button"
        style="@style/button_text" 
    />
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color1_button"
        style="@style/button_text" 
        android:id = "@+id/eight"
        android:text="@string/eight"
    />
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color1_button"
        style="@style/button_text" 
        android:id = "@+id/nine"
        android:text="@string/nine"
    />
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color2_button"
        style="@style/button_text" 
        android:id = "@+id/div"
        android:text="@string/div"
    />
   </LinearLayout>
    <LinearLayout android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:gravity="center"
       android:paddingTop="20dp">
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color1_button"
        style="@style/button_text" 
        android:id = "@+id/four"
        android:text="@string/four"
    />
    <Button
       android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color1_button"
        style="@style/button_text" 
        android:id = "@+id/five"
        android:text="@string/five"
    />
    <Button
       android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color1_button"
        style="@style/button_text" 
        android:id = "@+id/six"
        android:text="@string/six"
    />
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color2_button"
        style="@style/button_text"
        android:id = "@+id/mul"
        android:text="@string/mul"
    />
   </LinearLayout>
   <LinearLayout android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:gravity="center"
       android:paddingTop="20dp">
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color1_button"
        style="@style/button_text" 
        android:id = "@+id/one"
        android:text="@string/one"
    />
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color1_button"
        style="@style/button_text" 
        android:id = "@+id/two"
        android:text="@string/two"
    />
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color1_button"
        style="@style/button_text" 
        android:id = "@+id/three"
        android:text="@string/three"
    />
    <Button
         android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color2_button"
        style="@style/button_text"
        android:id = "@+id/sub"
        android:text="@string/sub"
    />
   </LinearLayout>
   <LinearLayout android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:gravity="center"
       android:paddingTop="20dp">
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"   
        android:id = "@+id/cancel"
        android:text="@string/cancel"
        style="@style/button_text" 
    />
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color1_button"
        style="@style/button_text" 
        android:id = "@+id/zero"
        android:text="@string/zero"
    />
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color3_button"
        style="@style/button_text" 
        android:id = "@+id/equal"
        android:text="@string/equal"
    />
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/color2_button"
        style="@style/button_text"
        android:id = "@+id/add"
        android:text="@string/add"
    />
   </LinearLayout>
   
</LinearLayout>
